# rabbitmq-socketio-example

./: docker-compose.yaml
client/: Dockerfile  Dockerfile.kubernetes  dev.default.conf  package-lock.json  package.json
client/src/: App.vue  main.js
client/src/components/: GridBox.vue  GridBoxButton.vue  GridBoxTable.vue  GridBoxTableView.vue  NavBar.vue
client/src/plugins/: Socketio.js
server/: Dockerfile  manage.py  pyproject.toml  requirements.txt
server/project/: __init__.py  config.py  utils.py
server/project/apis/: alive.py  publish.py
winner/: Dockerfile  manage.py  pyproject.toml  requirements.txt
winner/project/: __init__.py  config.py
winner/project/api/: __init__.py  alive.py  events.py
worker/: .flake8  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt
