[tool.poetry]
name = "winner"
version = "0.1.0"
description = ""
authors = ["simon.islam <simon.islam@brilliant.com.bd>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flask-restx = "^0.5.1"
Flask-SocketIO = "^5.2.0"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
redis = "^4.3.3"
gevent-websocket = "^0.10.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
