[tool.poetry]
name = "winner"
version = "0.1.0"
description = ""
authors = ["simon.islam <simon.islam@brilliant.com.bd>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
flask-restx = "^0.5.1"
Flask-SocketIO = "^5.2.0"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
redis = "^4.3.3"
gevent-websocket = "^0.10.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
